--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,9 @@
+0.3.3.3
+	Fixed Theater Vault Box (added requirement - access to mountain challenge area)
+	Fixed Town Red Rooftop Discard not tracking
+	Fixed quarry intro shapers (needs rotated shapers)
+	Keep laser needs stars
+	
 0.3.3.2
 	Fixed wooden beam squares and shapers (added shapers requirement)
 	Fixed quarry roof discard (removed quarry access requirement)
