--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,14 @@
+0.3.3.3e
+	Fixed RGB house stars (the control panel needs both black and white and colored squares)
+
+0.3.3.3d
+	Monastary can be done out of logic with dots
+	Fixed quarry intro shapers (needs shapers)
+	Quarry Eraser and Squares Row can be done out of logic without dots
+
+0.3.3.3c
+	Fixed quarry access (unrandomized allows access from shady trees)
+
 0.3.3.3b
 	Fixed mountain layer 1 (needs colored squres)
 	Fixed UTM stars &  (needs colored squres)
